--- a/index.html
+++ b/index.html
@@ -38,76 +38,101 @@
           <h2>feature products</h2>
           <ul class="shop clearfix">
             <li class="shop_item">
-              <a class="item" href="#"><img class="features"
-                src="./img/img1.png"
-                alt="Blue Tshirt"
-                width="255"
-                height="282"
+              <a class="item item_menu" href="#"
+                ><img
+                  class="features"
+                  src="./img/img1.png"
+                  alt="Blue Tshirt"
+                  width="255"
+                  height="282"
               /></a>
-             <a class="item" href="#"> <h3>Blue Tshirt</h3></a><span>26</span>
-            </li class="shop_item">
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">Blue Tshirt</h3> </a
+              ><span class="item_menu">26</span>
+            </li>
             <li class="shop_item">
-              <img class="features" 
+              <img
+                class="features item_menu"
                 src="./img/img2.png"
                 alt="WOMAN shirt"
                 width="255"
                 height="282"
               />
-              <a class="item" href="#"><h3>WOMAN shirt</h3></a><span>31</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">WOMAN shirt</h3> </a
+              ><span class="item_menu">31</span>
             </li>
             <li class="shop_item">
-              <img class="features"
+              <img
+                class="features item_menu"
                 src="./img/img3.png"
                 alt="YELLOW Tshirt"
                 width="255"
                 height="282"
               />
-              <a class="item" href="#"><h3>YELLOW Tshirt</h3></a><span>21</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">YELLOW Tshirt</h3> </a
+              ><span class="item_menu">21</span>
             </li>
             <li class="shop_item">
-              <img class="features"
+              <img
+                class="features item_menu"
                 src="./img/img4.png"
                 alt="Cool lingerie"
                 width="255"
                 height="282"
               />
-              <a class="item" href="#"><h3>Cool lingerie</h3></a><span>56</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">Cool lingerie</h3> </a
+              ><span class="item_menu">56</span>
             </li>
             <li class="shop_item">
-              <img class="features"
+              <img
+                class="features item_menu"
                 src="./img/img5.png"
                 alt="Blue Tshirt"
                 width="255"
                 height="282"
               />
-              <a class="item" href="#"><h3>Blue Tshirt</h3></a><span>26</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">Blue Tshirt</h3> </a
+              ><span class="item_menu">26</span>
             </li>
             <li class="shop_item">
-              <img class="features"
+              <img
+                class="features item_menu"
                 src="./img/img6.png"
                 alt="WOMAN shirt"
                 width="255"
                 height="282"
               />
-              <a class="item" href="#"><h3>WOMAN shirt</h3></a><span>31</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">WOMAN shirt</h3> </a
+              ><span class="item_menu">31</span>
             </li>
             <li class="shop_item">
-              <img class="features"
+              <img
+                class="features item_menu"
                 src="./img/img7.png"
                 alt="YELLOW Tshirt"
                 width="255"
                 height="282"
               />
-             <a class="item" href=""><h3>YELLOW Tshirt</h3></a><span>21</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">YELLOW Tshirt</h3> </a
+              ><span class="item_menu">21</span>
             </li>
             <li class="shop_item">
-              <img class="features"
+              <img
+                class="features item_menu"
                 src="./img/img8.png"
                 alt="Cool lingerie"
                 width="255"
                 height="282"
               />
-              <a class="item" href="#"><h3>Cool lingerie</h3></a><span>56</span>
+              <a class="item item_menu" href="#">
+                <h3 class="item_menu">Cool lingerie</h3> </a
+              ><span class="item_menu">56</span>
             </li>
           </ul>
         </section>
@@ -116,42 +141,47 @@
           <h2>latest news</h2>
           <ul class="news_list clearfix">
             <li class="news">
-              <img src="./img/ipad.png" alt="ipad" width="350" height="261"/>
+              <img src="./img/ipad.png" alt="ipad" width="350" height="261" />
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h4>
-              <p>
+              <p class="news_lorem">
                 Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                 vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
+                Nam nec tellus a odio tincidunt
               </p>
-              <a href="#">Read More</a>
+              <a class="button" href="#">Read More</a>
             </li>
 
             <li class="news">
-              <img src="./img/two_girl.png" alt="two_girl" width="350" height="261" />
+              <img
+                src="./img/two_girl.png"
+                alt="two_girl"
+                width="347"
+                height="261"
+              />
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h4>
-              <p>
+              <p class="news_lorem">
                 Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                 vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
+                Nam nec tellus a odio tincidunt
               </p>
-              <a href="#">Read More</a>
+              <a class="button" href="#">Read More</a>
             </li>
 
             <li class="news">
-              <img src="./img/bus.png" alt="bus" width="350" height="261"/>
+              <img src="./img/bus.png" alt="bus" width="347" height="262" />
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h4>
-              <p>
+              <p class="news_lorem">
                 Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                 vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
+                Nam nec tellus a odio tincidunt
               </p>
-              <a href="#">Read More</a>
+              <a class="button" href="#">Read More</a>
             </li>
           </ul>
         </section>
