--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <section class="shop">
           <h2>feature products</h2>
           <ul class="shop clearfix">
-            <li class="shop_item">
-              <a class="item item_menu" href="#"
+            <li class="shop_item clearfix">
+              <a class="item" href="#"
                 ><img
                   class="features"
                   src="./img/img1.png"
@@ -46,93 +46,118 @@
                   width="255"
                   height="282"
               /></a>
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">Blue Tshirt</h3> </a
-              ><span class="item_menu">26</span>
+
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> Blue Tshirt </a>
+                </h3>
+                <span class="cost">&#36;26</span>
+              </div>
             </li>
-            <li class="shop_item">
+            <li class="shop_item clearfix">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img2.png"
                 alt="WOMAN shirt"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">WOMAN shirt</h3> </a
-              ><span class="item_menu">31</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> WOMAN shirt </a>
+                </h3>
+                <span class="cost">&#36;31</span>
+              </div>
             </li>
-            <li class="shop_item">
+            <li class="shop_item clearfix">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img3.png"
                 alt="YELLOW Tshirt"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">YELLOW Tshirt</h3> </a
-              ><span class="item_menu">21</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> YELLOW Tshirt </a>
+                </h3>
+                <span class="cost">&#36;21</span>
+              </div>
             </li>
             <li class="shop_item">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img4.png"
                 alt="Cool lingerie"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">Cool lingerie</h3> </a
-              ><span class="item_menu">56</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> Cool lingerie </a>
+                </h3>
+                <span class="cost">&#36;56</span>
+              </div>
             </li>
-            <li class="shop_item">
+            <li class="shop_item clearfix">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img5.png"
                 alt="Blue Tshirt"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">Blue Tshirt</h3> </a
-              ><span class="item_menu">26</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> Blue Tshirt </a>
+                </h3>
+                <span class="cost">&#36;26</span>
+              </div>
             </li>
-            <li class="shop_item">
+            <li class="shop_item clearfix">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img6.png"
                 alt="WOMAN shirt"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">WOMAN shirt</h3> </a
-              ><span class="item_menu">31</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> WOMAN shirt </a>
+                </h3>
+                <span class="cost">&#36;31</span>
+              </div>
             </li>
-            <li class="shop_item">
+            <li class="shop_item clearfix">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img7.png"
                 alt="YELLOW Tshirt"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">YELLOW Tshirt</h3> </a
-              ><span class="item_menu">21</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> YELLOW Tshirt </a>
+                </h3>
+                <span class="cost">&#36;21</span>
+              </div>
             </li>
-            <li class="shop_item">
+            <li class="shop_item clearfix">
               <img
-                class="features item_menu"
+                class="features"
                 src="./img/img8.png"
                 alt="Cool lingerie"
                 width="255"
                 height="282"
               />
-              <a class="item item_menu" href="#">
-                <h3 class="item_menu">Cool lingerie</h3> </a
-              ><span class="item_menu">56</span>
+              <div class="cost_panel">
+                <h3 class="item">
+                  <a class="item" href="#"> Cool lingerie </a>
+                </h3>
+                <span class="cost">&#36;56</span>
+              </div>
             </li>
           </ul>
         </section>
@@ -187,5 +212,6 @@
         </section>
       </main>
     </section>
+    <div class="block">Lorem ipsum dolor sit amet.</div>
   </body>
 </html>
