--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link src="./css/normalize.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -34,7 +30,7 @@
       </header>
 
       <main>
-        <section class="shop">
+        <section>
           <h2>feature products</h2>
           <ul class="shop clearfix">
             <li class="shop_item clearfix">
@@ -165,7 +161,7 @@
         <section>
           <h2>latest news</h2>
           <ul class="news_list clearfix">
-            <li class="news">
+            <li class="news clearfix">
               <img src="./img/ipad.png" alt="ipad" width="350" height="261" />
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
@@ -178,7 +174,7 @@
               <a class="button" href="#">Read More</a>
             </li>
 
-            <li class="news">
+            <li class="news clearfix">
               <img
                 src="./img/two_girl.png"
                 alt="two_girl"
@@ -196,7 +192,7 @@
               <a class="button" href="#">Read More</a>
             </li>
 
-            <li class="news">
+            <li class="news clearfix">
               <img src="./img/bus.png" alt="bus" width="347" height="262" />
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
@@ -212,6 +208,5 @@
         </section>
       </main>
     </section>
-    <div class="block">Lorem ipsum dolor sit amet.</div>
   </body>
 </html>
