--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
         <h2>feature products</h2>
         <ul class="shop clearfix">
           <li class="shop_item clearfix">
-            <a class="item" href="#"
-              ><img
+            <a class="item" href="#">
+              <img
                 class="features"
                 src="./img/img1.png"
                 alt="Blue Tshirt"
                 width="255"
                 height="282"
-            /></a>
+              />
+            </a>
 
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> Blue Tshirt </a>
+                <a class="item" href="#">Blue Tshirt</a>
               </h3>
               <span class="cost">&#36;26</span>
             </div>
@@ -59,7 +60,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> WOMAN shirt </a>
+                <a class="item" href="#">WOMAN shirt</a>
               </h3>
               <span class="cost">&#36;31</span>
             </div>
@@ -74,7 +75,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> YELLOW Tshirt </a>
+                <a class="item" href="#">YELLOW Tshirt</a>
               </h3>
               <span class="cost">&#36;21</span>
             </div>
@@ -89,7 +90,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> Cool lingerie </a>
+                <a class="item" href="#">Cool lingerie</a>
               </h3>
               <span class="cost">&#36;56</span>
             </div>
@@ -104,7 +105,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> Blue Tshirt </a>
+                <a class="item" href="#">Blue Tshirt</a>
               </h3>
               <span class="cost">&#36;26</span>
             </div>
@@ -119,7 +120,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> WOMAN shirt </a>
+                <a class="item" href="#">WOMAN shirt</a>
               </h3>
               <span class="cost">&#36;31</span>
             </div>
@@ -134,7 +135,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> YELLOW Tshirt </a>
+                <a class="item" href="#">YELLOW Tshirt</a>
               </h3>
               <span class="cost">&#36;21</span>
             </div>
@@ -149,7 +150,7 @@
             />
             <div class="cost_panel">
               <h3 class="item">
-                <a class="item" href="#"> Cool lingerie </a>
+                <a class="item" href="#">Cool lingerie</a>
               </h3>
               <span class="cost">&#36;56</span>
             </div>
